Fix platform argument pass